--- a/assets/css/backbone.ui.slider.css
+++ b/assets/css/backbone.ui.slider.css
@@ -1,7 +1,8 @@
 .ui-slider {
-	position: absolute;
+	display: block;
+	position: relative;
 	width: 100%;
-	bottom: 0;
+	min-height: 50px;
 	margin: 0 auto;
 }
 
@@ -12,7 +13,7 @@
 
 .ui-slider label {
 	position: absolute;
-	top: -40px;
+	top: 0px;
 	left: 0px;
 	margin-left: -50px;
 	width: 100px;
@@ -23,6 +24,8 @@
 }
 
 .ui-slider input {
+	position: absolute;
+	bottom: 0;
 	width: 100%;
 	margin:0 auto;
 }
